--- a/mcq.css
+++ b/mcq.css
@@ -100,32 +100,38 @@ input:checked + .slider .moon-icon {
     padding: 1rem;
     border-right: 1px solid #ddd;
     background-color: #eee;
-}
-
-.chapter-menu h2 {
+    border-radius: 8px; /* Add rounded corners */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a slight shadow */
+  }
+  
+  .chapter-menu h2 {
     margin-bottom: 1rem;
     font-size: 1.5rem;
     color: #333;
-}
-
-.chapter-menu ul {
+  }
+  
+  .chapter-menu ul {
     list-style: none;
     padding: 0;
-}
-
-.chapter-menu li {
-    margin-bottom: 0.5rem;
-}
-
-.chapter-menu a {
+  }
+  
+  .chapter-menu li {
+    margin-bottom: 0.8rem;
+  }
+  
+  .chapter-menu a {
     text-decoration: none;
     color: #333;
-    transition: color 0.3s;
-}
-
-.chapter-menu a:hover {
+    transition: color 0.3s ease;
+    display: block; /* Make each list item a block for better spacing */
+    padding: 0.5rem; /* Add padding for better readability */
+    border-radius: 4px; /* Add rounded corners to list items */
+  }
+  
+  .chapter-menu a:hover {
     color: #007bff;
-}
+    background-color: #f0f0f0; /* Add a subtle hover effect */
+  }
 
 /* MCQ section styles */
 .chapter-box{
@@ -139,12 +145,13 @@ input:checked + .slider .moon-icon {
     margin-bottom: 1rem;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+    font-weight: 500;
 }
 
 .mcq-section h3 {
     margin-bottom: 1rem;
     font-size: 1.5rem;
-    color: #333;
+    color: #0B8B8F;
 }
 
 .mcq-question {
