--- a/subject.css
+++ b/subject.css
@@ -12,7 +12,11 @@ body {
     color: #333;
 }
 
-
+.scroll-to-top{
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
 
 /* Dark Mode Toggle */
 .switch {
@@ -95,8 +99,57 @@ input:checked + .slider .moon-icon {
 }
 
 /* Chapter menu styles */
+
+/* Score Display Styling */
+.score {
+    font-size: 1rem;
+    font-weight: bold;
+    color: #fff;
+    background-color: #0B8B8F;
+    padding: 1rem;
+    border-radius: 8px;
+    margin: 1rem 0;
+    text-align: center;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
+}
+
+.score:hover {
+    background-color: #0A7B7C;
+}
+
+/* Clear Scores Button Styling */
+.clear-scores {
+    display: inline-block;
+    padding: 0.75rem ;
+    margin-bottom: 0.5rem;
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.clear-scores:hover {
+    background-color: #c82333;
+    transform: scale(1.05);
+}
+
+.clear-scores:active {
+    background-color: #bd2130;
+    transform: scale(0.98);
+}
+
+
 .chapter-menu {
     width: fit-content;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     padding: 1rem;
     overflow-y: scroll;
     height: 100vh;
@@ -195,6 +248,16 @@ input:checked + .slider .moon-icon {
     color: white;
 }
 
+.mcq-image {
+    display: block;
+    margin: 20px auto;
+    max-width: 100%;
+    height: auto;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+}
+
+
 .feedback {
     margin-top: 0.5rem;
     color: green;
@@ -216,6 +279,49 @@ input:checked + .slider .moon-icon {
     display: none;
     margin-top: 0.5rem;
 }
+
+/* Question and Answer section styles */
+.qa-section {
+    width: auto;
+    padding: 2rem;
+    background-color: #fff;
+    margin-bottom: 1rem;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    font-weight: 500;
+}
+
+.qa-section h3 {
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+    color: #0B8B8F;
+}
+
+.qa-question {
+    margin-bottom: 1rem;
+}
+
+.qa-question p {
+    margin-bottom: 0.5rem;
+}
+
+.show-answer-qa {
+    display: block;
+    text-align: center;
+    margin-top: 1rem;
+    cursor: pointer;
+    color: #007bff;
+}
+
+.show-answer-qa:hover {
+    text-decoration: underline;
+}
+
+.answer-qa {
+    display: none;
+    margin-top: 0.5rem;
+}
+
 
 /* Responsive Styles */
 
